elimino etiqueta input de cierre

--- a/idex.html
+++ b/idex.html
@@ -9,14 +9,14 @@
 <body>
     <h1>CALCULADORA</h1>
     <div id="container-body">
-        <input type="number" id="operador1"></input>
+        <input type="number" id="operador1">
         <div id="botones">
             <button type="number" id="boton-suma">+</button>
             <button type="number" id="boton-resta">-</button>
             <button type="number" id="boton-multiplicar">*</button>
             <button type="number" id="boton-dividir">/</button>
         </div>
-        <input type="number" id="operador2"></input>
+        <input type="number" id="operador2">
         <h1 id="resultado"></h1>
     </div>
     <script src="demo.js"></script>
